--- a/src/diff.css
+++ b/src/diff.css
@@ -1,10 +1,10 @@
 /**
  * Contao Open Source CMS
- * 
- * Copyright (C) 2005-2012 Leo Feyer
- * 
+ *
+ * Copyright (c) 2005-2013 Leo Feyer
+ *
  * @package Core
- * @link    http://contao.org
+ * @link    https://contao.org
  * @license http://www.gnu.org/licenses/lgpl-3.0.html LGPL
  */
 
@@ -25,6 +25,9 @@ h2 {
 .formbody {
 	margin:12px 0 18px;
 	text-align:right;
+}
+.formbody .tl_select {
+	width:220px;
 }
 .formbody .tl_submit {
 	margin-top:1px;
