--- a/src/login.css
+++ b/src/login.css
@@ -1,10 +1,10 @@
 /**
  * Contao Open Source CMS
- * 
- * Copyright (C) 2005-2012 Leo Feyer
- * 
+ *
+ * Copyright (c) 2005-2013 Leo Feyer
+ *
  * @package Core
- * @link    http://contao.org
+ * @link    https://contao.org
  * @license http://www.gnu.org/licenses/lgpl-3.0.html LGPL
  */
 
@@ -133,7 +133,7 @@ body {
 
 /* Form fields */
 .tl_text {
-	width:174px;
+	width:172px;
 }
 .tl_select {
 	width:180px;
