--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,10 @@
 /**
  * Contao Open Source CMS
- * 
- * Copyright (C) 2005-2012 Leo Feyer
- * 
+ *
+ * Copyright (c) 2005-2013 Leo Feyer
+ *
  * @package Core
- * @link    http://contao.org
+ * @link    https://contao.org
  * @license http://www.gnu.org/licenses/lgpl-3.0.html LGPL
  */
 
@@ -14,7 +14,7 @@ body {
 }
 body.popup {
 	background:#fff;
-	padding:6px 12px;
+	padding:6px 0;
 }
 
 /* Header */
@@ -40,17 +40,6 @@ body.popup {
 	text-align:right;
 	color:#666966;
 }
-#safe_mode {
-	margin:0;
-	background-image:none;
-	padding:8px 12px 10px;
-	border-top:1px solid #ccc;
-}
-#safe_mode a {
-	float:right;
-	margin:1px 3px 0 24px;
-	color:#666966;
-}
 
 /* Container */
 #container {
@@ -58,9 +47,8 @@ body.popup {
 	margin:0 auto;
 }
 .popup #container {
-	width:730px;
-	margin:0;
 	padding:0;
+	width:741px;
 }
 
 /* Left */
@@ -231,6 +219,17 @@ h2.sub_headline_index {
 .nobg .tl_error,.nobg .tl_confirm,.nobg .tl_info,.nobg .tl_new {
 	background-color:transparent;
 }
+.tl_permalert {
+	margin:0;
+	background-image:none;
+	padding:8px 12px 10px;
+	border-top:1px solid #ccc;
+}
+.tl_permalert a {
+	float:right;
+	margin:1px 3px 0 24px;
+	color:#666966;
+}
 
 /* Filter */
 .tl_panel,.tl_version_panel {
@@ -247,11 +246,20 @@ h2.sub_headline_index {
 	border-top:1px solid #bbb;
 	text-align:right;
 }
+.tl_version_panel .tl_select {
+	width:240px;
+}
 .mac .tl_version_panel .tl_select,.mac .tl_panel_bottom .tl_select {
 	font-size:11px;
 }
+.safari .tl_version_panel {
+	overflow:hidden; /* see #5854 */
+}
 .tl_version_panel .tl_formbody {
 	position:relative;
+}
+.safari .tl_version_panel .tl_formbody {
+	float:right; /* see #5854 */
 }
 .tl_version_panel .tl_submit {
 	margin-top:1px;
@@ -330,6 +338,9 @@ h2.sub_headline_index {
 	font-weight:bold;
 	font-size:11px;
 }
+.tl_tbox.theme_import h3,.tl_tbox.theme_import h4,.tl_tbox.theme_import p {
+	line-height:1.5;
+}
 .tl_help,.tl_help a {
 	margin-bottom:0;
 	padding:1px 0;
@@ -362,7 +373,7 @@ h2.sub_headline_index {
 	margin-top:0;
 }
 #search {
-	margin:9px 18px -9px;
+	margin:18px 18px -9px;
 	text-align:right;
 }
 #search .tl_text {
@@ -371,6 +382,15 @@ h2.sub_headline_index {
 }
 .mac #search .tl_text {
 	padding:4px 2px;
+}
+.tl_edit_preview {
+	margin:18px 18px 6px;
+}
+.tl_edit_preview img {
+	padding:2px;
+	border:1px solid #ddd;
+	background:#fff;
+	box-shadow:0 1px 3px #ddd;
 }
 
 /* Rebuild the search index */
@@ -519,16 +539,16 @@ h2.sub_headline_index {
 	overflow:hidden;
 	position:relative;
 }
-.tl_content.mooStart,.tl_content.mooStop {
+.tl_content.wrapper_start,.tl_content.wrapper_separator,.tl_content.wrapper_stop {
 	background:#f3f3f3;
 }
-.tl_content.mooStart {
+.tl_content.wrapper_start,.tl_content.wrapper_separator {
 	border-bottom:0;
 }
-.tl_content.mooStop {
+.tl_content.wrapper_stop,.tl_content.wrapper_separator {
 	border-top:0;
 }
-.tl_content.mooStart h1 {
+.tl_content.wrapper_start h1 {
 	margin:0 0 9px 6px;
 }
 .tl_content.indent {
@@ -551,6 +571,11 @@ h2.sub_headline_index {
 }
 .tl_content pre.disabled {
 	color:#a6a6a6;
+}
+.tl_content span.comment {
+	color:#5c9ac9;
+	display:inline-block;
+	margin-bottom:3px;
 }
 .tl_content_left {
 	float:left;
@@ -596,6 +621,21 @@ h2.sub_headline_index {
 }
 .limit_height input[type="file"] {
 	position:relative;
+}
+.tl_form_field_preview td {
+	padding-right:6px;
+}
+.tl_form_field_preview td.col_0 {
+	min-width:180px;
+}
+.tl_form_field_preview .text,.tl_form_field_preview .password {
+	width:140px;
+}
+.tl_form_field_preview .select {
+	width:144px;
+}
+.tl_form_field_preview textarea {
+	width:280px;
 }
 
 /* Tree view */
@@ -745,7 +785,7 @@ ul.sgallery li {
 	float:left;
 	margin-right:0;
 }
-ul.sgallery .gimage {
+.gimage {
 	margin:2px;
 	border:1px solid #808080;
 }
@@ -838,7 +878,14 @@ ul.sgallery .gimage {
 	top:1px;
 }
 .tl_modulewizard .tl_select {
-	width:360px;
+	width:400px;
+}
+.tl_modulewizard img.mw_enable,.js .tl_modulewizard input.mw_enable {
+	display:none;
+}
+.js .tl_modulewizard img.mw_enable {
+	display:inline;
+	cursor:pointer;
 }
 
 /* Options wizard */
@@ -891,25 +938,29 @@ ul.sgallery .gimage {
 }
 
 /* Checkbox wizard */
+.tl_checkbox_wizard {
+	padding-top:2px;
+}
 .tl_checkbox_wizard_img {
 	margin-top:-1px;
 	position:relative;
 	top:3px;
 }
-.tl_checkbox_wizard > span {
+.tl_checkbox_wizard .fixed {
 	display:block;
-	margin:-2px 0 0;
-}
-.tl_checkbox_wizard span.fixed {
 	margin-top:1px;
 }
-.tl_checkbox_wizard {
-	padding-top:2px;
+.tl_checkbox_wizard .sortable span {
+	display:block;
+	margin:-1px 0 0;
 }
 .tl_checkbox_wizard label {
 	display:block;
 	margin:-14px 0;
 	padding-left:48px;
+}
+.js .tl_checkbox_wizard label {
+	padding-left:34px;
 }
 .tl_checkbox_wizard label:last-child {
 	margin-bottom:0;
@@ -941,7 +992,7 @@ ul.sgallery .gimage {
 }
 .tl_metawizard .tl_text {
 	float:left;
-	width:580px;
+	width:550px;
 }
 .tl_metawizard br {
 	clear:left;
@@ -959,7 +1010,7 @@ ul.sgallery .gimage {
 	cursor:pointer;
 }
 .tl_metawizard_new .tl_select {
-	width:inherit;
+	width:300px;
 }
 .tl_metawizard_new .tl_submit {
 	margin-top:1px;
@@ -998,7 +1049,7 @@ ul.sgallery .gimage {
 	opacity: 0.5;
 }
 
-/* Galleries */
+/* Misc */
 .ce_gallery ul {
 	overflow:hidden;
 }
@@ -1006,32 +1057,69 @@ ul.sgallery .gimage {
 	float:left;
 	margin:0 6px 6px 0;
 }
-
-/* Context menu */
-#contextmenu {
-	display:block;
+#theme-store {
+	margin-top:24px;
+	text-align:right;
+}
+.drag-handle {
+	position:relative;
+	top:1px;
+	cursor:move;
+	display:none;
+}
+.js .drag-handle {
+	display:inline;
+}
+.parent_view .drag-handle,.tl_tablewizard .drag-handle {
+	top:0;
+}
+.tl_listwizard .drag-handle {
+	top:3px;
+}
+.tl_checkbox_wizard .drag-handle {
+	vertical-align:bottom;
+}
+.js .button-move {
+	width:0;
+	height:0;
+	left:-1000px;
+	top:-1000px;
 	position:absolute;
-	z-index:99999999;
-	background:#fff;
-	border:1px solid #ccc;
-	padding:3px 6px;
-	border-radius:4px;
-	margin-right:12px;
+	overflow:hidden;
+	display:inline;
 }
-.webkit #contextmenu {
-	padding:4px 6px 2px;
+ul.sortable li {
+	cursor:move;
 }
-#contextmenu a {
-	display:block;
-	padding:3px 0 2px 0;
-	white-space:nowrap;
+#manager {
+	margin-top:9px;
+	background:#f3f3f3;
+	border-bottom:1px solid #bbb;
+	padding:3px 3px 4px;
 }
-#contextmenu img {
-	vertical-align:top;
+#manager .open {
+	padding:2px 0 3px 20px;
+	background:url("images/manager.gif") left center no-repeat;
 }
-#contextmenu img[width="12"] {
-	padding-left:1px;
-	padding-right:1px;
+#manager .close {
+	padding:2px 0 3px 20px;
+	background:url("images/back.gif") left center no-repeat;
+}
+.ace_editor * {
+	font-family:Courier,monospace;
+	font-size:12px;
+}
+.ace_editor.fullsize {
+	position:absolute;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	width:auto;
+	height:auto !important;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	box-sizing:border-box;
 }
 
 /* Navigation icons */
@@ -1088,8 +1176,8 @@ a.navigation.tpl_editor {
 }
 
 /* Default icon classes */
-a.navigation,.header_home,.header_user,.header_preview,.header_clipboard,.header_logout,.header_back,.header_new,.header_rss,
-.header_edit_all,.header_delete_all,.header_new_folder,.header_css_import,.header_theme_import,.header_toggle,.header_sync {
+a.navigation,.header_icon,.header_home,.header_user,.header_preview,.header_clipboard,.header_logout,.header_back,.header_new,.header_rss,
+.header_edit_all,.header_delete_all,.header_new_folder,.header_css_import,.header_theme_import,.header_store,.header_toggle,.header_sync {
 	padding:2px 0 3px 20px;
 	background-position:left center;
 	background-repeat:no-repeat;
@@ -1153,6 +1241,10 @@ a.navigation {
 }
 .header_theme_import {
 	background-image:url("images/theme_import.gif");
+}
+.header_store {
+	padding-left:18px;
+	background-image:url("images/store.gif");
 }
 .header_toggle {
 	background:url("images/folPlus.gif") no-repeat -1px center;
@@ -1322,6 +1414,25 @@ fieldset.collapsed > legend {
 }
 .pagination .current {
 	color:#999;
+}
+
+/* File synchronization */
+#sync-results {
+	overflow:hidden;
+	margin:6px 18px 0;
+}
+#sync-results p {
+	margin-bottom:0;
+}
+#sync-results .left {
+	float:left;
+	padding-top:2px;
+}
+#sync-results .right {
+	float:right;
+}
+#sync-results .tl_checkbox {
+	top:0;
 }
 
 /***************** oxygen_theme *****************/
