--- a/src/popup.css
+++ b/src/popup.css
@@ -1,17 +1,17 @@
 /**
  * Contao Open Source CMS
- * 
- * Copyright (C) 2005-2012 Leo Feyer
- * 
+ *
+ * Copyright (c) 2005-2013 Leo Feyer
+ *
  * @package Core
- * @link    http://contao.org
+ * @link    https://contao.org
  * @license http://www.gnu.org/licenses/lgpl-3.0.html LGPL
  */
 
 /* Body */
 body {
 	background:#fff;
-	padding:6px 12px;
+	padding:6px 0;
 }
 
 /* Headline */
